Test: 입력검증테스트 수정, 추가